# mincraftGL

./: CMakeCache.txt  CMakeLists.txt
include/glad/: glad.h
lib/: libglfw.so.3.3
src/: main.cpp
src/utills/: FileUtills.cpp  FileUtills.h
